src/Flex&Bison/mainBison.output
Terminals which are not used

   EXISTS_VARIABLE
   CLEAR_VARIABLES
   LIST_VARIABLES


Grammar

    0 $accept: calculation $end

    1 calculation: /* empty */
    2            | calculation line

    3 line: NEWLINE
    4     | declaration NEWLINE
    5     | declaration ';' NEWLINE
    6     | EXPRESSION ';' NEWLINE
    7     | EXPRESSION NEWLINE
    8     | error NEWLINE
    9     | HELP NEWLINE
   10     | QUIT NEWLINE
   11     | END_OF_FILE

   12 declaration: DECLARE VARIABLE '[' EXPRESSION ']' '[' EXPRESSION ']'
   13            | DECLARE VARIABLE '[' EXPRESSION ']'
   14            | DECLARE VARIABLE

   15 EXPRESSION: FLOAT_VALUE
   16           | VARIABLE
   17           | VARIABLE '=' EXPRESSION
   18           | VARIABLE '[' EXPRESSION ']' '[' EXPRESSION ']' '=' EXPRESSION
   19           | VARIABLE '[' EXPRESSION ']' '=' EXPRESSION
   20           | VARIABLE OPE_SLASH_EQ EXPRESSION
   21           | VARIABLE OPE_MINUS_EQ EXPRESSION
   22           | VARIABLE OPE_PLUS_EQ EXPRESSION
   23           | VARIABLE OPE_TIMES_EQ EXPRESSION
   24           | VARIABLE OPE_PERC_EQ EXPRESSION
   25           | EXPRESSION OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION OPE_AND_AND EXPRESSION
   27           | EXPRESSION OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION '>' EXPRESSION
   30           | EXPRESSION OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION '<' EXPRESSION
   32           | EXPRESSION OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION '+' EXPRESSION
   34           | EXPRESSION '-' EXPRESSION
   35           | EXPRESSION '*' EXPRESSION
   36           | EXPRESSION '/' EXPRESSION
   37           | EXPRESSION '%' EXPRESSION
   38           | '!' EXPRESSION
   39           | '-' EXPRESSION
   40           | '+' EXPRESSION
   41           | VARIABLE '[' EXPRESSION ']' '[' EXPRESSION ']'
   42           | VARIABLE '[' EXPRESSION ']'
   43           | ONE_OPERATOR_FUNCTION '(' EXPRESSION ')'
   44           | VARIABLE OPE_PLUS_PLUS
   45           | VARIABLE OPE_MINUS_MINUS
   46           | '(' EXPRESSION ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 38
'%' (37) 37
'(' (40) 43 46
')' (41) 43 46
'*' (42) 35
'+' (43) 33 40
'-' (45) 34 39
'/' (47) 36
';' (59) 5 6
'<' (60) 31
'=' (61) 17 18 19
'>' (62) 29
'[' (91) 12 13 18 19 41 42
']' (93) 12 13 18 19 41 42
error (256) 8
FLOAT_VALUE (258) 15
VARIABLE (259) 12 13 14 16 17 18 19 20 21 22 23 24 41 42 44 45
ONE_OPERATOR_FUNCTION (260) 43
END_OF_FILE (261) 11
OPE_SLASH_EQ (262) 20
OPE_AND_AND (263) 26
OPE_VERT_VERT (264) 25
OPE_MINUS_EQ (265) 21
OPE_MINUS_MINUS (266) 45
OPE_PLUS_EQ (267) 22
OPE_PLUS_PLUS (268) 44
OPE_LESSTHAN_EQ (269) 32
OPE_MORETHAN_EQ (270) 30
OPE_EXCL_EQ (271) 28
OPE_EQ_EQ (272) 27
OPE_TIMES_EQ (273) 23
OPE_PERC_EQ (274) 24
NEWLINE (275) 3 4 5 6 7 8 9 10
QUIT (276) 10
HELP (277) 9
DECLARE (278) 12 13 14
EXISTS_VARIABLE (279)
CLEAR_VARIABLES (280)
LIST_VARIABLES (281)
NEGATE (282)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
calculation (43)
    on left: 1 2, on right: 0 2
line (44)
    on left: 3 4 5 6 7 8 9 10 11, on right: 2
declaration (45)
    on left: 12 13 14, on right: 4 5
EXPRESSION (46)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right: 6 7 12 13
    17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 46


state 0

    0 $accept: . calculation $end

    $default  reduce using rule 1 (calculation)

    calculation  go to state 1


state 1

    0 $accept: calculation . $end
    2 calculation: calculation . line

    $end                   shift, and go to state 2
    error                  shift, and go to state 3
    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    END_OF_FILE            shift, and go to state 7
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11
    NEWLINE                shift, and go to state 12
    QUIT                   shift, and go to state 13
    HELP                   shift, and go to state 14
    DECLARE                shift, and go to state 15

    line         go to state 16
    declaration  go to state 17
    EXPRESSION   go to state 18


state 2

    0 $accept: calculation $end .

    $default  accept


state 3

    8 line: error . NEWLINE

    NEWLINE  shift, and go to state 19


state 4

   15 EXPRESSION: FLOAT_VALUE .

    $default  reduce using rule 15 (EXPRESSION)


state 5

   16 EXPRESSION: VARIABLE .
   17           | VARIABLE . '=' EXPRESSION
   18           | VARIABLE . '[' EXPRESSION ']' '[' EXPRESSION ']' '=' EXPRESSION
   19           | VARIABLE . '[' EXPRESSION ']' '=' EXPRESSION
   20           | VARIABLE . OPE_SLASH_EQ EXPRESSION
   21           | VARIABLE . OPE_MINUS_EQ EXPRESSION
   22           | VARIABLE . OPE_PLUS_EQ EXPRESSION
   23           | VARIABLE . OPE_TIMES_EQ EXPRESSION
   24           | VARIABLE . OPE_PERC_EQ EXPRESSION
   41           | VARIABLE . '[' EXPRESSION ']' '[' EXPRESSION ']'
   42           | VARIABLE . '[' EXPRESSION ']'
   44           | VARIABLE . OPE_PLUS_PLUS
   45           | VARIABLE . OPE_MINUS_MINUS

    OPE_SLASH_EQ     shift, and go to state 20
    OPE_MINUS_EQ     shift, and go to state 21
    OPE_MINUS_MINUS  shift, and go to state 22
    OPE_PLUS_EQ      shift, and go to state 23
    OPE_PLUS_PLUS    shift, and go to state 24
    OPE_TIMES_EQ     shift, and go to state 25
    '['              shift, and go to state 26
    OPE_PERC_EQ      shift, and go to state 27
    '='              shift, and go to state 28

    $default  reduce using rule 16 (EXPRESSION)


state 6

   43 EXPRESSION: ONE_OPERATOR_FUNCTION . '(' EXPRESSION ')'

    '('  shift, and go to state 29


state 7

   11 line: END_OF_FILE .

    $default  reduce using rule 11 (line)


state 8

   40 EXPRESSION: '+' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 30


state 9

   39 EXPRESSION: '-' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 31


state 10

   46 EXPRESSION: '(' . EXPRESSION ')'

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 32


state 11

   38 EXPRESSION: '!' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 33


state 12

    3 line: NEWLINE .

    $default  reduce using rule 3 (line)


state 13

   10 line: QUIT . NEWLINE

    NEWLINE  shift, and go to state 34


state 14

    9 line: HELP . NEWLINE

    NEWLINE  shift, and go to state 35


state 15

   12 declaration: DECLARE . VARIABLE '[' EXPRESSION ']' '[' EXPRESSION ']'
   13            | DECLARE . VARIABLE '[' EXPRESSION ']'
   14            | DECLARE . VARIABLE

    VARIABLE  shift, and go to state 36


state 16

    2 calculation: calculation line .

    $default  reduce using rule 2 (calculation)


state 17

    4 line: declaration . NEWLINE
    5     | declaration . ';' NEWLINE

    ';'      shift, and go to state 37
    NEWLINE  shift, and go to state 38


state 18

    6 line: EXPRESSION . ';' NEWLINE
    7     | EXPRESSION . NEWLINE
   25 EXPRESSION: EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    ';'              shift, and go to state 51
    '%'              shift, and go to state 52
    NEWLINE          shift, and go to state 53


state 19

    8 line: error NEWLINE .

    $default  reduce using rule 8 (line)


state 20

   20 EXPRESSION: VARIABLE OPE_SLASH_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 54


state 21

   21 EXPRESSION: VARIABLE OPE_MINUS_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 55


state 22

   45 EXPRESSION: VARIABLE OPE_MINUS_MINUS .

    $default  reduce using rule 45 (EXPRESSION)


state 23

   22 EXPRESSION: VARIABLE OPE_PLUS_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 56


state 24

   44 EXPRESSION: VARIABLE OPE_PLUS_PLUS .

    $default  reduce using rule 44 (EXPRESSION)


state 25

   23 EXPRESSION: VARIABLE OPE_TIMES_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 57


state 26

   18 EXPRESSION: VARIABLE '[' . EXPRESSION ']' '[' EXPRESSION ']' '=' EXPRESSION
   19           | VARIABLE '[' . EXPRESSION ']' '=' EXPRESSION
   41           | VARIABLE '[' . EXPRESSION ']' '[' EXPRESSION ']'
   42           | VARIABLE '[' . EXPRESSION ']'

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 58


state 27

   24 EXPRESSION: VARIABLE OPE_PERC_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 59


state 28

   17 EXPRESSION: VARIABLE '=' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 60


state 29

   43 EXPRESSION: ONE_OPERATOR_FUNCTION '(' . EXPRESSION ')'

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 61


state 30

   25 EXPRESSION: EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION
   40           | '+' EXPRESSION .

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    '%'  shift, and go to state 52

    $default  reduce using rule 40 (EXPRESSION)


state 31

   25 EXPRESSION: EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION
   39           | '-' EXPRESSION .

    $default  reduce using rule 39 (EXPRESSION)


state 32

   25 EXPRESSION: EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION
   46           | '(' EXPRESSION . ')'

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    ')'              shift, and go to state 62
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    '%'              shift, and go to state 52


state 33

   25 EXPRESSION: EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION
   38           | '!' EXPRESSION .

    $default  reduce using rule 38 (EXPRESSION)


state 34

   10 line: QUIT NEWLINE .

    $default  reduce using rule 10 (line)


state 35

    9 line: HELP NEWLINE .

    $default  reduce using rule 9 (line)


state 36

   12 declaration: DECLARE VARIABLE . '[' EXPRESSION ']' '[' EXPRESSION ']'
   13            | DECLARE VARIABLE . '[' EXPRESSION ']'
   14            | DECLARE VARIABLE .

    '['  shift, and go to state 63

    $default  reduce using rule 14 (declaration)


state 37

    5 line: declaration ';' . NEWLINE

    NEWLINE  shift, and go to state 64


state 38

    4 line: declaration NEWLINE .

    $default  reduce using rule 4 (line)


state 39

   33 EXPRESSION: EXPRESSION '+' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 65


state 40

   34 EXPRESSION: EXPRESSION '-' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 66


state 41

   35 EXPRESSION: EXPRESSION '*' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 67


state 42

   36 EXPRESSION: EXPRESSION '/' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 68


state 43

   26 EXPRESSION: EXPRESSION OPE_AND_AND . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 69


state 44

   25 EXPRESSION: EXPRESSION OPE_VERT_VERT . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 70


state 45

   31 EXPRESSION: EXPRESSION '<' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 71


state 46

   29 EXPRESSION: EXPRESSION '>' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 72


state 47

   32 EXPRESSION: EXPRESSION OPE_LESSTHAN_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 73


state 48

   30 EXPRESSION: EXPRESSION OPE_MORETHAN_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 74


state 49

   28 EXPRESSION: EXPRESSION OPE_EXCL_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 75


state 50

   27 EXPRESSION: EXPRESSION OPE_EQ_EQ . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 76


state 51

    6 line: EXPRESSION ';' . NEWLINE

    NEWLINE  shift, and go to state 77


state 52

   37 EXPRESSION: EXPRESSION '%' . EXPRESSION

    FLOAT_VALUE            shift, and go to state 4
    VARIABLE               shift, and go to state 5
    ONE_OPERATOR_FUNCTION  shift, and go to state 6
    '+'                    shift, and go to state 8
    '-'                    shift, and go to state 9
    '('                    shift, and go to state 10
    '!'                    shift, and go to state 11

    EXPRESSION  go to state 78


state 53

    7 line: EXPRESSION NEWLINE .

    $default  reduce using rule 7 (line)


state 54

   20 EXPRESSION: VARIABLE OPE_SLASH_EQ EXPRESSION .
   25           | EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    '%'              shift, and go to state 52

    $default  reduce using rule 20 (EXPRESSION)


state 55

   21 EXPRESSION: VARIABLE OPE_MINUS_EQ EXPRESSION .
   25           | EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    '%'              shift, and go to state 52

    $default  reduce using rule 21 (EXPRESSION)


state 56

   22 EXPRESSION: VARIABLE OPE_PLUS_EQ EXPRESSION .
   25           | EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    '%'              shift, and go to state 52

    $default  reduce using rule 22 (EXPRESSION)


state 57

   23 EXPRESSION: VARIABLE OPE_TIMES_EQ EXPRESSION .
   25           | EXPRESSION . OPE_VERT_VERT EXPRESSION
   26           | EXPRESSION . OPE_AND_AND EXPRESSION
   27           | EXPRESSION . OPE_EQ_EQ EXPRESSION
   28           | EXPRESSION . OPE_EXCL_EQ EXPRESSION
   29           | EXPRESSION . '>' EXPRESSION
   30           | EXPRESSION . OPE_MORETHAN_EQ EXPRESSION
   31           | EXPRESSION . '<' EXPRESSION
   32           | EXPRESSION . OPE_LESSTHAN_EQ EXPRESSION
   33           | EXPRESSION . '+' EXPRESSION
   34           | EXPRESSION . '-' EXPRESSION
   35           | EXPRESSION . '*' EXPRESSION
   36           | EXPRESSION . '/' EXPRESSION
   37           | EXPRESSION . '%' EXPRESSION

    '+'              shift, and go to state 39
    '-'              shift, and go to state 40
    '*'              shift, and go to state 41
    '/'              shift, and go to state 42
    OPE_AND_AND      shift, and go to state 43
    OPE_VERT_VERT    shift, and go to state 44
    '<'              shift, and go to state 45
    '>'              shift, and go to state 46
    OPE_LESSTHAN_EQ  shift, and go to state 47
    OPE_MORETHAN_EQ  shift, and go to state 48
    OPE_EXCL_EQ      shift, and go to state 49
    OPE_EQ_EQ        shift, and go to state 50
    '%'              shift, and go to state 52

    $default  reduce using rule 23 (EXPRESSION)


state 58
